writing cox regression outputs for all the interactions

--- a/analysis/PCAWG_sig_pathways_survivals.Rmd
+++ b/analysis/PCAWG_sig_pathways_survivals.Rmd
@@ -15,17 +15,21 @@ knitr::opts_chunk$set(comment = '', fig.width = 6,
 library(here)
 library(survival)
 library(survminer)
-fig.dir = here("figures/sig_pathway_survivals")
-
-if(! file.exists(fig.dir)){
-    dir.create(fig.dir, recursive = TRUE)
-}
 
 source(here("R/load_packages.R"))
 library(gridExtra)
 
-out.dir = here("data/RDS/PCAWG/metadata")
+input.dir = here("data/RDS/PCAWG/metadata")
 
+
+out.dir = here("data/RDS/PCAWG/sig_pathway_survivals")
+fig.dir = here("figures/sig_pathway_survivals")
+
+for (dir.name in c(fig.dir, out.dir)) {
+    if (! file.exists(dir.name) ) {
+        dir.create(dir.name, recursive = TRUE)
+    }
+}
 ```
 
 ### Reading in clinical and signature data
@@ -49,7 +53,7 @@ if (all.equal(rownames(PCAWG.full.subset.ann.pathways), rownames(PCAWG.pathways.
 }
 
 
-PCAWG.clin.df = readRDS(file = file.path(out.dir, "PCAWG.clin.df.RDS") )
+PCAWG.clin.df = readRDS(file = file.path(input.dir, "PCAWG.clin.df.RDS") )
 
 positive.sig.pathway = read.delim(file = here("supp_data", 
                                         "PCAWG_sig_pathway_positive_interaction_tissue_summaries.tsv"),
@@ -109,6 +113,15 @@ for (i in 1:length(pos.plotlist) ) {
 dev.off()
 ```
 
+```{r}
+pos.coxlist = get_surv_coxlist(positive.sig.pathway, 
+                                 dataset = PCAWG.path.sig.aggregate,
+                                 clin.df = PCAWG.clin.df,
+                                 with.total.muts = TRUE, 
+                                 binary.status = FALSE )
+saveRDS(pos.coxlist, file = file.path(out.dir, "pos.coxlist.totmut.nonbinary.RDS"))
+```
+
 ### Survival models for negative interactions
 
 ```{r}
@@ -156,3 +169,14 @@ for (i in 1:length(neg.plotlist) ) {
 }
 dev.off()
 ```
+
+
+```{r}
+neg.coxlist = get_surv_coxlist(negative.sig.pathway, 
+                                 dataset = PCAWG.path.sig.aggregate,
+                                 clin.df = PCAWG.clin.df,
+                                 with.total.muts = TRUE, 
+                                 binary.status = FALSE )
+saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.totmut.nonbinary.RDS"))
+```
+
