--- a/analysis/TCGA_sig_sig_survivals.Rmd
+++ b/analysis/TCGA_sig_sig_survivals.Rmd
@@ -15,17 +15,20 @@ knitr::opts_chunk$set(comment = '', fig.width = 6,
 library(here)
 library(survival)
 library(survminer)
-fig.dir = here("figures/sig_sig_survivals")
-
-if(! file.exists(fig.dir)){
-    dir.create(fig.dir, recursive = TRUE)
-}
 
 source(here("R/load_packages.R"))
 library(gridExtra)
 
-out.dir = out.dir = here("data/RDS/TCGA/metadata")
+input.dir = here("data/RDS/TCGA/metadata")
 
+out.dir = here("data/RDS/TCGA/sig_sig_survivals")
+fig.dir = here("figures/sig_sig_survivals")
+
+for (dir.name in c(fig.dir, out.dir)) {
+    if (! file.exists(dir.name) ) {
+        dir.create(dir.name, recursive = TRUE)
+    }
+}
 ```
 
 ### Reading in clinical and signature data
@@ -33,7 +36,7 @@ out.dir = out.dir = here("data/RDS/TCGA/metadata")
 ```{r}
 TCGA.full.subset.ann = readRDS(file = here("data/RDS",
                                            "TCGA/signatures/TCGA.full.subset.ann.RDS"))   
-TCGA.clin.df = readRDS(file = file.path(out.dir, "TCGA.clin.df.RDS") )
+TCGA.clin.df = readRDS(file = file.path(input.dir, "TCGA.clin.df.RDS") )
 
 positive.sig.sig = read.delim(file = here("supp_data", 
                                         "TCGA_positive_interaction_tissue_summaries.tsv"),
@@ -96,6 +99,17 @@ for (i in 1:length(pos.plotlist) ) {
 dev.off()
 ```
 
+
+```{r}
+pos.coxlist = get_surv_coxlist(positive.sig.sig, 
+                                 dataset = TCGA.full.subset.ann,
+                                 clin.df = TCGA.clin.df,
+                                 with.total.muts = TRUE, 
+                                 binary.status = FALSE)
+saveRDS(pos.coxlist, file = file.path(out.dir, "pos.coxlist.totmut.nonbinary.RDS"))
+```
+
+
 ### Survival models for negative interactions
 
 ```{r}
@@ -146,6 +160,16 @@ for (i in 1:length(neg.plotlist) ) {
 }
 dev.off()
 ```
+
+```{r}
+neg.coxlist = get_surv_coxlist(negative.sig.sig, 
+                                 dataset = TCGA.full.subset.ann,
+                                 clin.df = TCGA.clin.df,
+                                 with.total.muts = TRUE, 
+                                 binary.status = FALSE)
+saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.totmut.nonbinary.RDS"))
+```
+
 
 ### Specific interactions
 
