--- a/analysis/PCAWG_sig_sig_survivals.Rmd
+++ b/analysis/PCAWG_sig_sig_survivals.Rmd
@@ -15,17 +15,20 @@ knitr::opts_chunk$set(comment = '', fig.width = 6,
 library(here)
 library(survival)
 library(survminer)
-fig.dir = here("figures/sig_sig_survivals")
-
-if(! file.exists(fig.dir)){
-    dir.create(fig.dir, recursive = TRUE)
-}
 
 source(here("R/load_packages.R"))
 library(gridExtra)
 
-out.dir = here("data/RDS/PCAWG/metadata")
+input.dir = here("data/RDS/PCAWG/metadata")
 
+out.dir = here("data/RDS/PCAWG/sig_sig_survivals")
+fig.dir = here("figures/sig_sig_survivals")
+
+for (dir.name in c(fig.dir, out.dir)) {
+    if (! file.exists(dir.name) ) {
+        dir.create(dir.name, recursive = TRUE)
+    }
+}
 ```
 
 ### Reading in clinical and signature data
@@ -33,7 +36,7 @@ out.dir = here("data/RDS/PCAWG/metadata")
 ```{r}
 PCAWG.full.subset.ann = readRDS(file = here("data/RDS",
                                            "PCAWG/signatures/PCAWG.full.subset.ann.RDS"))   
-PCAWG.clin.df = readRDS(file = file.path(out.dir, "PCAWG.clin.df.RDS") )
+PCAWG.clin.df = readRDS(file = file.path(input.dir, "PCAWG.clin.df.RDS") )
 
 positive.sig.sig = read.delim(file = here("supp_data", 
                                         "PCAWG_positive_interaction_tissue_summaries.tsv"),
@@ -96,6 +99,17 @@ for (i in 1:length(pos.plotlist) ) {
 dev.off()
 ```
 
+
+```{r}
+pos.coxlist = get_surv_coxlist(positive.sig.sig, 
+                                 dataset = PCAWG.full.subset.ann,
+                                 clin.df = PCAWG.clin.df,
+                                 with.total.muts = TRUE, 
+                                 binary.status = FALSE)
+saveRDS(pos.coxlist, file = file.path(out.dir, "pos.coxlist.totmut.nonbinary.RDS"))
+```
+
+
 ### Survival models for negative interactions
 
 ```{r}
@@ -148,11 +162,12 @@ dev.off()
 ```
 
 ```{r}
-neg.coxlist = get_surv_plotlist(negative.sig.sig, 
+neg.coxlist = get_surv_coxlist(negative.sig.sig, 
                                  dataset = PCAWG.full.subset.ann,
                                  clin.df = PCAWG.clin.df,
                                  with.total.muts = TRUE, 
                                  binary.status = FALSE)
+saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.totmut.nonbinary.RDS"))
 ```
 
 
