--- a/analysis/PCAWG_sig_pathways_survivals.Rmd
+++ b/analysis/PCAWG_sig_pathways_survivals.Rmd
@@ -6,6 +6,7 @@ output:
 ---
 
 ```{r}
+rm(list = ls())
 knitr::opts_chunk$set(comment = '', fig.width = 6, 
                       fig.height = 6, echo = FALSE, 
                       warning = FALSE)
@@ -72,6 +73,7 @@ pos.plotlist = get_surv_plotlist(positive.sig.pathway,
                                  dataset = PCAWG.path.sig.aggregate,
                                  clin.df = PCAWG.clin.df,
                                  with.total.muts = TRUE, 
+                                 tmb.logged = TRUE,
                                  binary.status = FALSE )
 
 pdf(file.path(fig.dir, "PCAWG_positive_interactions_survivals_totmut_nonbinary.pdf"),
@@ -102,6 +104,7 @@ pos.plotlist = get_surv_plotlist(positive.sig.pathway,
                                  dataset = PCAWG.path.sig.aggregate,
                                  clin.df = PCAWG.clin.df,
                                  with.total.muts = TRUE, 
+                                 tmb.logged = TRUE,
                                  binary.status = TRUE )
 
 pdf(file.path(fig.dir, "PCAWG_positive_interactions_survivals_totmut_binary.pdf"),
@@ -118,6 +121,7 @@ pos.coxlist = get_surv_coxlist(positive.sig.pathway,
                                  dataset = PCAWG.path.sig.aggregate,
                                  clin.df = PCAWG.clin.df,
                                  with.total.muts = TRUE, 
+                               tmb.logged = TRUE,
                                  binary.status = FALSE )
 saveRDS(pos.coxlist, file = file.path(out.dir, "pos.coxlist.totmut.nonbinary.RDS"))
 ```
@@ -129,6 +133,7 @@ neg.plotlist = get_surv_plotlist(negative.sig.pathway,
                                  dataset = PCAWG.path.sig.aggregate,
                                  clin.df = PCAWG.clin.df,
                                  with.total.muts = TRUE, 
+                                 tmb.logged = TRUE,
                                  binary.status = FALSE )
 
 pdf(file.path(fig.dir, "PCAWG_negative_interactions_survivals_totmut_nonbinary.pdf"),
@@ -159,6 +164,7 @@ neg.plotlist = get_surv_plotlist(negative.sig.pathway,
                                  dataset = PCAWG.path.sig.aggregate,
                                  clin.df = PCAWG.clin.df,
                                  with.total.muts = TRUE, 
+                                 tmb.logged = TRUE,
                                  binary.status = TRUE )
 
 pdf(file.path(fig.dir, "PCAWG_negative_interactions_survivals_totmut_binary.pdf"),
@@ -176,6 +182,7 @@ neg.coxlist = get_surv_coxlist(negative.sig.pathway,
                                  dataset = PCAWG.path.sig.aggregate,
                                  clin.df = PCAWG.clin.df,
                                  with.total.muts = TRUE, 
+                               tmb.logged = TRUE,
                                  binary.status = FALSE )
 saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.totmut.nonbinary.RDS"))
 ```
